--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <title>YouTube</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm navbar-light mb-3">
+        <nav class="navbar navbar-expand-sm navbar-light mb-3  ">
             <div class="container-fluid">
                 <div mt-3 mt-sm-0>
                     <a class="navbar-brand logo" href="#">
@@ -35,8 +35,8 @@
                             placeholder="Rechercher"
                             aria-label="Search"
                         />
-                        <button class="border btn-search" type="submit">
-                            <img src="image/search.png" />
+                        <button class="border btn-search" type="submit" >
+                            <img src="image/search.png" style="width:25px" />
                         </button>
                         <span class="material-symbols-outlined mt-2 ms-4">
                             mic
@@ -65,7 +65,7 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col-lg-2 p-5">
+            <div class="col-lg-2 ">
                 <div class="hstack mb-3">
                     <span class="material-symbols-outlined mx-4">
                         home
@@ -132,7 +132,7 @@
                     Accueil
                 </div>
                 <hr>
-                Abonnements<br><br>
+                <p class="ps-3">Abonnements</p>
                 <div class="hstack mb-3">
                     <img
                             src="image/avatar1.png"
@@ -172,14 +172,14 @@
             </div>
             <div class="col-lg-10">
                 <div class="row mt-2 mx-2">
-                    <ul class="nav">
-                        <li class="nav-item active mt-2 mt-sm-0">
-                            <a class="nav-link" href="#"
+                    <ul class="nav  justify-content-between overflow-hidden ">
+                        <li class="nav-item active  mt-2 mt-sm-0 rounded-0">
+                            <a class="nav-link d-flex" href="#"
                                 ><img src="image/explore.png" />Explore</a
                             >
                         </li>
-                        <li class="nav-item current mt-2 mt-sm-0">
-                            <a class="nav-link" href="#">All</a>
+                        <li class="nav-item current mt-2 mt-sm-0 bg-dark">
+                            <a class="nav-link text-light" href="#">All</a>
                         </li>
                         <li class="nav-item mt-2 mt-sm-0">
                             <a class="nav-link" href="#">Live</a>
@@ -195,6 +195,15 @@
                         </li>
                         <li class="nav-item mt-2 mt-sm-0">
                             <a class="nav-link" href="#"> Ali jaber</a>
+                        </li>
+                        <li class="nav-item mt-2 mt-sm-0">
+                            <a class="nav-link" href="#"> ja morant goat</a>
+                        </li>
+                        <li class="nav-item mt-2 mt-sm-0">
+                            <a class="nav-link" href="#"> ja morant goat</a>
+                        </li>
+                        <li class="nav-item mt-2 mt-sm-0">
+                            <a class="nav-link" href="#"> ja morant goat</a>
                         </li>
                         <li class="nav-item mt-2 mt-sm-0">
                             <a class="nav-link" href="#"> ja morant goat</a>
