--- a/index.html
+++ b/index.html
@@ -81,8 +81,47 @@
                 </div>
             </div>
         </nav>
-        <div class="row">
-            <div class="col-lg-2 for-put-hover" id="myDiv" style="display: none;">
+        <div class="row m-2">
+            <ul class="nav justify-content-between overflow-hidden">
+                <li class="nav-item active mt-2 rounded-0">
+                    <a class="nav-link d-flex" href="#"
+                        ><img src="image/explore.png" />Explore</a
+                    >
+                </li>
+                <li class="nav-item current mt-2 bg-dark">
+                    <a class="nav-link text-light" href="#">All</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#">Live</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> Islam</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> Basketball</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> Foot</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> Ali jaber</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> ja morant goat</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> ja morant goat</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> ja morant goat</a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link" href="#"> ja morant goat</a>
+                </li>
+            </ul>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-lg-2 for-put-hover mt-5" id="myDiv" style="display: none;">
                 <div class="hstack mb-3 mx-2 py-2 active">
                     <span class="material-symbols-outlined mx-4"> home </span>
                     Accueil
@@ -180,45 +219,7 @@
                 </div>
             </div>
             <div class="col-lg-10 agencement">
-                <div class="row mt-2 mx-2">
-                    <ul class="nav justify-content-between overflow-hidden">
-                        <li class="nav-item active mt-2 rounded-0">
-                            <a class="nav-link d-flex" href="#"
-                                ><img src="image/explore.png" />Explore</a
-                            >
-                        </li>
-                        <li class="nav-item current mt-2 bg-dark">
-                            <a class="nav-link text-light" href="#">All</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#">Live</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> Islam</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> Basketball</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> Foot</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> Ali jaber</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> ja morant goat</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> ja morant goat</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> ja morant goat</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="#"> ja morant goat</a>
-                        </li>
-                    </ul>
-                </div>
+                
                 <div class="row mt-5 gy-4 mx-2">
                     <div class="col-md-6 col-lg-4">
                         <div class="card mb-3 border-0 rounded-4">
