--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-light mb-3">
             <div class="container-fluid">
-                <div mt-3 mt-sm-0>
+                <div class="mt-3 mt-sm-0">
                     <a
                         class="navbar-brand ms-2"
                         href="#"
@@ -44,7 +44,7 @@
                         <img src="image/Logo.png" /><sup>SN</sup>
                     </a>
                 </div>
-                <div mt-3 mt-sm-0>
+                <div class="mt-3 mt-sm-0">
                     <form class="d-flex" role="search">
                         <input
                             class="form-control px-5"
@@ -60,7 +60,7 @@
                         </span>
                     </form>
                 </div>
-                <div class="right-logo mt-3 mt-sm-0">
+                <div class="right-logo mt-3 mt-sm-0 p-2 ">
                     <a class="navbar-brand" href="#"
                         ><img src="image/cast.png"
                     /></a>
@@ -81,42 +81,57 @@
                 </div>
             </div>
         </nav>
-        <div class="row m-2">
-            <ul class="nav justify-content-between overflow-hidden">
-                <li class="nav-item active mt-2 rounded-0">
+        <div class="row m-2 ">
+            <ul class="nav gap-2 overflow-auto ">
+                <li class="nav-item active  rounded-0">
                     <a class="nav-link d-flex" href="#"
                         ><img src="image/explore.png" />Explore</a
                     >
                 </li>
-                <li class="nav-item current mt-2 bg-dark">
+                <li class="nav-item current  bg-dark">
                     <a class="nav-link text-light" href="#">All</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item ">
                     <a class="nav-link" href="#">Live</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> Islam</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> Basketball</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> Foot</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> Ali jaber</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> ja morant goat</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> ja morant goat</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> ja morant goat</a>
                 </li>
-                <li class="nav-item mt-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#"> ja morant goat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Islam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Islam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Islam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Islam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> Islam</a>
                 </li>
             </ul>
         </div>
